--- a/store/templates/includes/footer.html
+++ b/store/templates/includes/footer.html
@@ -6,7 +6,7 @@
 			</div>
 			<div class="col-6 copyright mt-3">
 				<p class="float-right text-muted">Created with <i class="fa fa-heart"></i> by
-					<a href="https://diegoosvaldo.me/"><i>diegoosvaldo85</i> </a>
+					<a href="https://diegoosvaldo.me/" target="_blank"><i>diegoosvaldo85</i> </a>
 				</p>
 			</div>
 		</div>
