Add template categorias

--- a/store/templates/includes/last.html
+++ b/store/templates/includes/last.html
@@ -21,7 +21,7 @@
 										</td>
 										<td><b>{{p.categoria}}</b><br>{{p.descripcion|safe|truncatechars:"50"}} </td>
 										<td width="100"> 
-											<a href="#" class="btn btn-info" width="50">Ver detalle</a>
+											<a href="{{p.get_absolute_url}}" class="btn btn-info" width="50">Ver detalle</a>
 										</td>
 										<td width="100">
 											<a href="#" class="btn btn-success" width="50">Add carrito</a>
