--- a/producto/templates/producto/producto_list.html
+++ b/producto/templates/producto/producto_list.html
@@ -17,14 +17,14 @@
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="{% url 'store:home'%}">Home</a></li>
-          <li class="breadcrumb-item"><a href="{% url 'store:categorias'%}">Categorias</a></li>
+          <li class="breadcrumb-item"><a href="#">Categorias</a></li>
           <li class="breadcrumb-item active" aria-current="page">{{categoria}}</li>
         </ol>
       </nav>
     </div>
   </div>
 </div>
-<div class="container mb-5">
+<div class="container">
   <div class="row">
     <div class="col-12 col-sm-3">
       <div class="card bg-light mb-3">
@@ -43,7 +43,7 @@
       <div class="row">
       	{% for p in producto_list %}
         <div class="col-12 col-md-6 col-lg-4">
-          <div class="card">
+          <div class="card mb-3">
             <img class="card-img-top" src="{{p.imagen.url}}" alt="{{p.nombre}}">
             <div class="card-body">
               <h4 class="card-title"><a href="{{p.get_absolute_url}}" title="Ver Producto">{{p.nombre}}</a></h4>
