--- a/producto/templates/producto/producto_detail.html
+++ b/producto/templates/producto/producto_detail.html
@@ -1,1 +1,145 @@
-producto_detail.html
+{% extends 'bases/base.html' %}
+{% load static %}
+{% block title %}Jaguarete Kaa - Producto - {{producto}}{% endblock %}
+
+{% block content %}
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="{% url 'store:home'%}">Home</a></li>
+          <li class="breadcrumb-item"><a href="#">Productos</a></li>
+          <li class="breadcrumb-item active" aria-current="page">{{producto}}</li>
+        </ol>
+      </nav>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <!-- Image -->
+    <div class="col-12 col-lg-6">
+      <div class="card bg-light mb-3">
+        <div class="card-body">
+          <a href="" data-toggle="modal" data-target="#productModal">
+            <img class="img-fluid" src="{{producto.imagen.url}}" />
+          </a>
+        </div>
+      </div>
+    </div>
+    <!-- Add to cart -->
+    <div class="col-12 col-lg-6 add_to_cart_block">
+      <div class="card bg-light mb-3">
+        <div class="card-body">
+          <p class="price">{{producto.precio}} $us.</p>
+          <form method="get" action="cart.html">
+            <div class="form-group">
+              <label>Cantidad:</label>
+              <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                  <button type="button" class="quantity-left-minus btn btn-danger btn-number" data-type="minus" data-field="">
+                    <i class="fa fa-minus"></i>
+                  </button>
+                </div>
+                <input type="text" class="form-control text-center" id="quantity" name="quantity" min="1" max="10" value="1">
+                <div class="input-group-append">
+                  <button type="button" class="quantity-right-plus btn btn-success btn-number" data-type="plus" data-field="">
+                    <i class="fa fa-plus"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <a href="#" class="btn btn-success btn-lg btn-block text-uppercase">
+              <i class="fa fa-shopping-cart"></i> Add carrito
+            </a>
+          </form>
+          <div class="product_rassurance">
+            <ul class="list-inline">
+              <li class="list-inline-item"><i class="fa fa-truck fa-2x"></i><br />Envio gratuito</li>
+              <li class="list-inline-item"><i class="fa fa-credit-card fa-2x"></i><br />Pago seguro</li>
+              <li class="list-inline-item"><i class="fa fa-phone fa-2x"></i><br />+12 2345 6789</li>
+            </ul>
+          </div>
+          <div class="reviews_product p-3 mb-2 ">
+            3 comentarios
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            (4/5)
+            <a class="pull-right" href="#reviews">Ver comentarios</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <!-- Description -->
+    <div class="col-12">
+      <div class="card border-light mb-3">
+        <div class="card-header bg-primary text-white text-uppercase"><i class="fa fa-align-justify"></i> Descripcion</div>
+        <div class="card-body">
+          <p class="card-text">{{producto.descripcion|safe}}</p>
+        </div>
+      </div>
+    </div>
+    <!-- Comentarios -->
+    <div class="col-12" id="reviews">
+      <div class="card border-light mb-3">
+        <div class="card-header bg-primary text-white text-uppercase"><i class="fa fa-comment"></i> Comentarios</div>
+        <div class="card-body">
+          <div class="review">
+            <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
+            <meta itemprop="datePublished" content="01-01-2016">25/05/2021
+            <span class="fa fa-star"></span>
+            <span class="fa fa-star"></span>
+            <span class="fa fa-star"></span>
+            <span class="fa fa-star"></span>
+            <span class="fa fa-star"></span>
+            by Paul Smith
+            <p class="blockquote">
+              <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+            </p>
+            <hr>
+          </div>
+          <div class="review">
+            <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
+            <meta itemprop="datePublished" content="01-01-2016">15/06/2021
+            <span class="fa fa-star" aria-hidden="true"></span>
+            <span class="fa fa-star" aria-hidden="true"></span>
+            <span class="fa fa-star" aria-hidden="true"></span>
+            <span class="fa fa-star" aria-hidden="true"></span>
+            <span class="fa fa-star" aria-hidden="true"></span>
+            by Paul Smith
+            <p class="blockquote">
+              <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+            </p>
+            <hr>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal image -->
+<div class="modal fade" id="productModal" tabindex="-1" role="dialog" aria-labelledby="productModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="productModalLabel">{{producto}}</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <img class="img-fluid" src="{{producto.imagen.url}}" />
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock %}
