--- a/store/templates/includes/navbar.html
+++ b/store/templates/includes/navbar.html
@@ -10,9 +10,6 @@
         <li class="nav-item">
           <a class="nav-link active" href="{% url 'store:home'%}">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'producto:lista'%}">Productos</a>
-        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Categorias
@@ -30,9 +27,9 @@
         <li class="nav-item">
           <a class="nav-link" href="mailto:info@example.com">Contacto</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="{% url 'store:nuevo_producto'%}">Nuevo Producto</a>
-        </li>
+        </li> -->
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <div class="input-group input-group-sm">
