--- a/store/templates/includes/navbar.html
+++ b/store/templates/includes/navbar.html
@@ -40,7 +40,7 @@
             </button>
           </div>
         </div>
-        <a class="btn btn-success btn-sm ml-3" href="{% url 'store:carrito'%}">
+        <a class="btn btn-success btn-sm ml-3" href="{% url 'cart:detalle'%}">
           <i class="fa fa-shopping-cart"></i> Carrito
           <span class="badge badge-light">3</span>
         </a>
