--- a/producto/templates/producto/producto_list.html
+++ b/producto/templates/producto/producto_list.html
@@ -1,7 +1,6 @@
 {% extends 'bases/base.html' %}
 {% load static %}
 {% block title %}Jaguarete Kaa - Productos{% endblock %}
-
 {% block content %}
 <div class="container">
   <div class="row">
@@ -33,7 +32,7 @@
     </div>
     <div class="col">
       <div class="row">
-      	{% for p in producto_list %}
+        {% for p in producto_list %}
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card mb-3">
             <img class="card-img-top" src="{{p.imagen.url}}" alt="{{p.nombre}}">
@@ -53,7 +52,7 @@
         </div>
         {% endfor %}
       </div>
-      {% if paginator.page_range > '1' %}
+      {% if is_paginated %}
       {% include 'includes/pagination.html' %}
       {% endif %}
     </div>
