Add cart details and cart length

--- a/producto/templates/producto/producto_detail.html
+++ b/producto/templates/producto/producto_detail.html
@@ -43,7 +43,7 @@
                     <i class="fa fa-minus"></i>
                   </button>
                 </div>
-                {% render_field form.cantidad class+="form-control ml-sm-3" %}{{ form.override }}
+                {% render_field form.cantidad class+="form-control text-center" %}{{ form.override }}
                 <div class="input-group-append">
                   <button type="button" class="quantity-right-plus btn btn-success btn-number" data-type="plus" data-field="">
                     <i class="fa fa-plus"></i>
@@ -51,10 +51,7 @@
                 </div>
               </div>
             </div>
-            <!-- <a href="#" class="btn btn-success btn-lg btn-block text-uppercase">
-              <i class="fa fa-shopping-cart"></i> Add carrito
-            </a> -->
-            <input class="btn btn-success" type="submit" value="Add carrito">
+            <button type="submit" class="btn btn-success btn-lg btn-block text-uppercase"><i class="fa fa-shopping-cart"></i> Add carrito</button>
           </form>
           <div class="product_rassurance">
             <ul class="list-inline">
