--- a/store/templates/includes/last.html
+++ b/store/templates/includes/last.html
@@ -23,9 +23,9 @@
 										<td width="100"> 
 											<a href="{{p.get_absolute_url}}" class="btn btn-info" width="50">Ver detalle</a>
 										</td>
-										<td width="100">
+										<!-- <td width="100">
 											<a href="#" class="btn btn-success" width="50">Add carrito</a>
-										</td>
+										</td> -->
 									</tr>
 									{% endfor %}
 								</tbody>
