--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -19,7 +19,7 @@
                     <p class="btn btn-danger btn-block disabled">{{p.precio}} $us.</p>
                   </div>
                   <div class="col">
-                    <a href="#" class="btn btn-success btn-block">Add carrito</a>
+                    <a href="{{p.get_absolute_url}}" class="btn btn-info btn-block">Ver detalle</a>
                   </div>
                 </div>
               </div>
