--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -14,9 +14,9 @@
 {% block content %}
 <div class="container mb-4">
   <div class="row">
+    {% if cart %}
     <div class="col-12">
       <div class="table-responsive">
-        {% if cart %}
         <table class="table table-striped">
           <thead>
             <tr>
@@ -70,21 +70,23 @@
             </tr>
           </tbody>
         </table>
-        {% else %}
-        <p>Su carrito de compras esta vacio!</p>
-        {% endif %}
       </div>
     </div>
     <div class="col mb-2">
       <div class="row">
         <div class="col-sm-3  col-md-3">
-          <button class="btn btn-block btn-primary">Continuar comprando</button>
+          <a href="{% url 'producto:lista'%}" class="btn btn-block btn-primary">Seguir comprando</a>
         </div>
         <div class="col-sm-3 col-md-3 text-right">
           <button class="btn btn-block btn-success text-uppercase">Finalizar compra</button>
         </div>
       </div>
     </div>
+    {% else %}
+    <div class="col-12 text-center">
+      <h3 class="mb-3">Su carrito de compras esta vacio!</h3>
+    </div>
+    {% endif %}
   </div>
 </div>
 {% endblock %}
