--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -6,8 +6,7 @@
 <section class="jumbotron text-center">
   <div class="container">
     <h1 class="jumbotron-heading">Carrito de compras</h1>
-    <p class="lead text-muted mb-0">Le Lorem Ipsum est simplement du faux texte employé
-      dans la composition et la mise en page avant impression.</p>
+    <p class="lead text-muted mb-0">Le Lorem Ipsum est simplement.</p>
   </div>
 </section>
 {% endblock %}
