--- a/producto/templates/producto/producto_list.html
+++ b/producto/templates/producto/producto_list.html
@@ -1,6 +1,14 @@
 {% extends 'bases/base.html' %}
 {% load static %}
 {% block title %}Jaguarete Kaa - Productos{% endblock %}
+{% block section %}
+<section class="jumbotron text-center">
+  <div class="container">
+    <h1 class="jumbotron-heading">Categoria: {% if not categoria %}TODAS{% else %}{{categoria}}{% endif %}</h1>
+    <p class="lead text-muted mb-0">Le Lorem Ipsum est simplement du faux.</p>
+  </div>
+</section>
+{% endblock %}
 {% block content %}
 <div class="container">
   <div class="row">
@@ -37,16 +45,26 @@
           <div class="card mb-3">
             <img class="card-img-top" src="{{p.imagen.url}}" alt="{{p.nombre}}">
             <div class="card-body">
-              <h4 class="card-title"><a href="{{p.get_absolute_url}}" title="Ver Producto">{{p.nombre}}</a></h4>
+              <h4 class="card-title text-primary">{{p.nombre}}</h4>
               <p class="card-text">{{p.descripcion|safe|truncatechars:"50"}}</p>
               <div class="row">
                 <div class="col">
                   <p class="btn btn-danger btn-block disabled">{{p.precio}} $us.</p>
                 </div>
                 <div class="col">
-                  <a href="" class="btn btn-success btn-block">Add to cart</a>
+                  <a href="{{p.get_absolute_url}}" class="btn btn-info btn-block">Ver detalle</a>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+        {% empty %}
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card mb-3">
+            <img class="card-img-top" src="/media/img/nn.png" alt="NN">
+            <div class="card-body">
+              <!-- <h4 class="card-title text-primary">{{p.nombre}}</h4> -->
+              <p class="card-text">No existen prodructos en esta categoria.</p>
             </div>
           </div>
         </div>
