--- a/store/templates/store/about.html
+++ b/store/templates/store/about.html
@@ -30,7 +30,7 @@
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	</div>
-	<div class="col-lg-6 welcome-right-top mt-lg-0 mt-sm-5 mt-4">
+	<div class="col-lg-6 welcome-right-top mt-lg-0 mt-sm-5 mt-4 mb-5">
 		<img src="https://dummyimage.com/600x400/cfcfcf/ffffff.png" class="img-fluid" alt=" ">
 	</div>
 </div>
