--- a/store/templates/store/buscar.html
+++ b/store/templates/store/buscar.html
@@ -40,7 +40,7 @@
     </div>
     <div class="col">
       <div class="row">
-        {% for p in productos %}
+        {% for p in page_obj %}
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card mb-3">
             <img class="card-img-top" src="{{p.imagen.url}}" alt="{{p.nombre}}">
@@ -69,8 +69,8 @@
         </div>
         {% endfor %}
       </div>
-      {% if is_paginated %}
-      {% include 'includes/pagination.html' with page=page_obj %}
+      {% if page_obj.has_other_pages %}
+      {% include 'includes/pagination.html' %}
       {% endif %}
     </div>
   </div>
